c_cpp_includes/dtwainx.h

DTWAIN_HANDLE  DLLENTRY_DEF      DTWAIN_GetDTWAINHandle(VOID_PROTOTYPE);
/* DTWAIN Error message handling */
LONG           DLLENTRY_DEF      DTWAIN_GetLastError(VOID_PROTOTYPE);
LONG           DLLENTRY_DEF      DTWAIN_GetCountry(VOID_PROTOTYPE);
LONG           DLLENTRY_DEF      DTWAIN_GetLanguage(VOID_PROTOTYPE);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_GetCapValues(DTWAIN_SOURCE Source,LONG  lCap,LONG  lGetType,LPDTWAIN_ARRAY pArray);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_GetCapValuesEx(DTWAIN_SOURCE Source,LONG  lCap,LONG  lGetType,LONG  lContainerType,LPDTWAIN_ARRAY pArray);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_GetCapValuesEx2(DTWAIN_SOURCE Source,LONG lCap,LONG lGetType,LONG lContainerType,LONG nDataType,LPDTWAIN_ARRAY pArray );
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_GetCapOperations(DTWAIN_SOURCE Source,LONG lCapability,LPLONG  lpOps);
HANDLE         DLLENTRY_DEF      DTWAIN_GetCurrentAcquiredImage(DTWAIN_SOURCE Source );
LONG           DLLENTRY_DEF      DTWAIN_GetCurrentPageNum(DTWAIN_SOURCE Source );
LONG           DLLENTRY_DEF      DTWAIN_GetMaxAcquisitions(DTWAIN_SOURCE Source);
LONG           DLLENTRY_DEF      DTWAIN_GetMaxPagesToAcquire(DTWAIN_SOURCE Source);
/* Image information for TWAIN State 6 */
DTWAIN_BOOL          DLLENTRY_DEF    DTWAIN_GetImageInfo(DTWAIN_SOURCE Source,LPDTWAIN_FLOAT lpXResolution,LPDTWAIN_FLOAT lpYResolution,LPLONG lpWidth,LPLONG lpLength,LPLONG lpNumSamples,LPDTWAIN_ARRAY lpBitsPerSample,LPLONG lpBitsPerPixel,LPLONG lpPlanar,LPLONG lpPixelType,LPLONG lpCompression);
DTWAIN_BOOL          DLLENTRY_DEF    DTWAIN_GetContrast(DTWAIN_SOURCE Source,LPDTWAIN_FLOAT Contrast);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetDeviceNotifications(DTWAIN_SOURCE Source, LPLONG DevEvents);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetDeviceEvent(DTWAIN_SOURCE Source, LPLONG lpEvent);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetDeviceEventEx(DTWAIN_SOURCE Source, LPLONG lpEvent, LPDTWAIN_ARRAY pArray);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetDeviceEventInfo(DTWAIN_SOURCE Source, LONG nWhichInfo, LPVOID pValue);
/* Compression support for buffered transfer */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetCompressionType(DTWAIN_SOURCE Source, LPLONG lpCompression, DTWAIN_BOOL bCurrent);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetCompressionSize(DTWAIN_SOURCE Source, LPLONG lBytes );
LONG           DLLENTRY_DEF       DTWAIN_GetFeederFuncs(DTWAIN_SOURCE Source);
/* Duplex Scanner support */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetDuplexType(DTWAIN_SOURCE Source, LPLONG lpDupType);
/* Support for CAP_CUSTOMDSDATA */
HANDLE DLLENTRY_DEF DTWAIN_GetCustomDSData(DTWAIN_SOURCE Source, LPBYTE Data, DWORD dSize, LPDWORD pActualSize,LONG nFlags);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetJpegValues(DTWAIN_SOURCE Source, LPLONG pQuality, LPLONG Progressive);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetJobControl(DTWAIN_SOURCE Source, LPLONG pJobControl, DTWAIN_BOOL bCurrent);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetLightPath(DTWAIN_SOURCE Source, LPLONG lpLightPath);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetLightSources(DTWAIN_SOURCE Source, LPDTWAIN_ARRAY LightSources);
LONG        DLLENTRY_DEF DTWAIN_GetMaxRetryAttempts(DTWAIN_SOURCE Source);
LONG        DLLENTRY_DEF DTWAIN_GetCurrentRetryCount(DTWAIN_SOURCE Source);
/* This function actually initiates the querying of the ext image information.  This function
   will query the TWAIN Source.  If your TWAIN Source has bugs, this will be where any problem
   will exist */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetExtImageInfo(DTWAIN_SOURCE Source);
/* This returns the data that the Source returned when the item is queried.  */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetExtImageInfoData(DTWAIN_SOURCE Source, LONG nWhich, LPDTWAIN_ARRAY Data);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetManualDuplexCount(DTWAIN_SOURCE Source, LPLONG pSide1, LPLONG pSide2);
/* CAP_FEEDERALIGNMENT */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetFeederAlignment(DTWAIN_SOURCE Source, LPLONG lpAlignment );
/* CAP_FEEDERORDER */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetFeederOrder(DTWAIN_SOURCE Source, LPLONG lpOrder );
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetMaxBuffers(DTWAIN_SOURCE Source, LPDWORD pMaxBuf);
DTWAIN_BOOL          DLLENTRY_DEF    DTWAIN_GetHighlight(DTWAIN_SOURCE Source, LPDTWAIN_FLOAT Highlight);
/* Error buffer access */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetErrorBuffer(LPDTWAIN_ARRAY ArrayBuffer);
LONG        DLLENTRY_DEF DTWAIN_GetErrorBufferThreshold(VOID_PROTOTYPE);
LONG        DLLENTRY_DEF DTWAIN_GetDSMSearchOrder(VOID_PROTOTYPE);