language_bindings/Delphi/dtwain64u.pas

  function DTWAIN_GetCapFromName(szName:LPCWSTR):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetCapFromName';
  function DTWAIN_GetCapFromNameA(szName:PAnsiChar):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetCapFromNameA';
  function DTWAIN_GetCapFromNameW(szName:PWideChar):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetCapFromNameW';
  function DTWAIN_GetCapOperations(Source:DTWAIN_SOURCE;lCapability:DWORD;lpOps:LPLONG):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetCapOperations';
  function DTWAIN_GetCapValues(Source:DTWAIN_SOURCE;lCap:DWORD;lGetType:DWORD;pArray:LPDTWAIN_ARRAY):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetCapValues';
  function DTWAIN_GetCapValuesEx(Source:DTWAIN_SOURCE;lCap:DWORD;lGetType:DWORD;lContainerType:DWORD;pArray:LPDTWAIN_ARRAY):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetCapValuesEx';
  function DTWAIN_GetCapValuesEx2(Source:DTWAIN_SOURCE;lCap:DWORD;lGetType:DWORD;lContainerType:DWORD;nDataType:DWORD;pArray:LPDTWAIN_ARRAY):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetCapValuesEx2';
  function DTWAIN_GetCaption(Source:DTWAIN_SOURCE;Caption:LPWSTR):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetCaption';
  function DTWAIN_GetCaptionA(Source:DTWAIN_SOURCE;Caption:PAnsiChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetCaptionA';
  function DTWAIN_GetCaptionW(Source:DTWAIN_SOURCE;Caption:PWideChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetCaptionW';
  function DTWAIN_GetCompressionSize(Source:DTWAIN_SOURCE;lBytes:LPLONG):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetCompressionSize';
  function DTWAIN_GetCompressionType(Source:DTWAIN_SOURCE;lpCompression:LPLONG;bCurrent:DTWAIN_BOOL):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetCompressionType';
  function DTWAIN_GetContrast(Source:DTWAIN_SOURCE;var Contrast:DTWAIN_FLOAT):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetContrast';
  function DTWAIN_GetContrastString(Source:DTWAIN_SOURCE;Contrast:LPWSTR):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetContrastString';
  function DTWAIN_GetContrastStringA(Source:DTWAIN_SOURCE;Contrast:PAnsiChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetContrastStringA';
  function DTWAIN_GetContrastStringW(Source:DTWAIN_SOURCE;Contrast:PWideChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetContrastStringW';
  function DTWAIN_GetCountry:DWORD; stdcall;
 external 'DTWAIN64U.DLL' name 'DTWAIN_GetCountry';
  function DTWAIN_GetCurrentAcquiredImage(Source:DTWAIN_SOURCE):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetCurrentAcquiredImage';
  function DTWAIN_GetCurrentFileName(Source:DTWAIN_SOURCE;szName:LPWSTR;MaxLen:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetCurrentFileName';
  function DTWAIN_GetCurrentFileNameA(Source:DTWAIN_SOURCE;szName:PAnsiChar;MaxLen:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetCurrentFileNameA';
  function DTWAIN_GetCurrentFileNameW(Source:DTWAIN_SOURCE;szName:PWideChar;MaxLen:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetCurrentFileNameW';
  function DTWAIN_GetCurrentPageNum(Source:DTWAIN_SOURCE):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetCurrentPageNum';
  function DTWAIN_GetCurrentRetryCount(Source:DTWAIN_SOURCE):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetCurrentRetryCount';
  function DTWAIN_GetCustomDSData(Source:DTWAIN_SOURCE;Data:LPBYTE;dSize:DWORD;pActualSize:LPLONG;nFlags:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetCustomDSData';
  function DTWAIN_GetDSMFullName(DSMType:DWORD;szDLLName:LPWSTR;nMaxLen:DWORD;pWhichSearch:LPLONG):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetDSMFullName';
  function DTWAIN_GetDSMFullNameA(DSMType:DWORD;szDLLName:PAnsiChar;nMaxLen:DWORD;pWhichSearch:LPLONG):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetDSMFullNameA';
  function DTWAIN_GetDSMFullNameW(DSMType:DWORD;szDLLName:PWideChar;nMaxLen:DWORD;pWhichSearch:LPLONG):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetDSMFullNameW';
  function DTWAIN_GetDSMSearchOrder:DWORD; stdcall;
 external 'DTWAIN64U.DLL' name 'DTWAIN_GetDSMSearchOrder';
  function DTWAIN_GetDTWAINHandle:DWORD; stdcall;
 external 'DTWAIN64U.DLL' name 'DTWAIN_GetDTWAINHandle';
  function DTWAIN_GetDeviceEvent(Source:DTWAIN_SOURCE;lpEvent:LPLONG):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetDeviceEvent';
  function DTWAIN_GetDeviceEventEx(Source:DTWAIN_SOURCE;lpEvent:LPLONG;pArray:LPDTWAIN_ARRAY):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetDeviceEventEx';
  function DTWAIN_GetDeviceEventInfo(Source:DTWAIN_SOURCE;nWhichInfo:DWORD;pValue:LPVOID):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetDeviceEventInfo';
  function DTWAIN_GetDeviceNotifications(Source:DTWAIN_SOURCE;DevEvents:LPLONG):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetDeviceNotifications';
  function DTWAIN_GetDeviceTimeDate(Source:DTWAIN_SOURCE;szTimeDate:LPWSTR):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetDeviceTimeDate';
  function DTWAIN_GetDeviceTimeDateA(Source:DTWAIN_SOURCE;szTimeDate:PAnsiChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetDeviceTimeDateA';
  function DTWAIN_GetDeviceTimeDateW(Source:DTWAIN_SOURCE;szTimeDate:PWideChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetDeviceTimeDateW';
  function DTWAIN_GetDuplexType(Source:DTWAIN_SOURCE;lpDupType:LPLONG):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetDuplexType';
  function DTWAIN_GetErrorBuffer(ArrayBuffer:LPDTWAIN_ARRAY):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetErrorBuffer';
  function DTWAIN_GetErrorBufferThreshold:DWORD; stdcall;
 external 'DTWAIN64U.DLL' name 'DTWAIN_GetErrorBufferThreshold';
  function DTWAIN_GetErrorString(lError:DWORD;lpszBuffer:LPWSTR;nMaxLen:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetErrorString';
  function DTWAIN_GetErrorStringA(lError:DWORD;lpszBuffer:PAnsiChar;nLength:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetErrorStringA';
  function DTWAIN_GetErrorStringW(lError:DWORD;lpszBuffer:PWideChar;nLength:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetErrorStringW';
  function DTWAIN_GetExtCapFromName(szName:LPCWSTR):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetExtCapFromName';
  function DTWAIN_GetExtCapFromNameA(szName:PAnsiChar):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetExtCapFromNameA';
  function DTWAIN_GetExtCapFromNameW(szName:PWideChar):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetExtCapFromNameW';
  function DTWAIN_GetExtImageInfo(Source:DTWAIN_SOURCE):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetExtImageInfo';
  function DTWAIN_GetExtImageInfoData(Source:DTWAIN_SOURCE;nWhich:DWORD;Data:LPDTWAIN_ARRAY):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetExtImageInfoData';
  function DTWAIN_GetExtNameFromCap(nValue:DWORD;szValue:LPWSTR;nMaxLen:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetExtNameFromCap';
  function DTWAIN_GetExtNameFromCapA(nValue:DWORD;szValue:PAnsiChar;nLength:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetExtNameFromCapA';
  function DTWAIN_GetExtNameFromCapW(nValue:DWORD;szValue:PWideChar;nLength:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetExtNameFromCapW';
  function DTWAIN_GetFeederAlignment(Source:DTWAIN_SOURCE;lpAlignment:LPLONG):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetFeederAlignment';
  function DTWAIN_GetFeederFuncs(Source:DTWAIN_SOURCE):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetFeederFuncs';
  function DTWAIN_GetFeederOrder(Source:DTWAIN_SOURCE;lpOrder:LPLONG):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetFeederOrder';
  function DTWAIN_GetHighlight(Source:DTWAIN_SOURCE;var Highlight:DTWAIN_FLOAT):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetHighlight';
  function DTWAIN_GetHighlightString(Source:DTWAIN_SOURCE;Highlight:LPWSTR):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetHighlightString';
  function DTWAIN_GetHighlightStringA(Source:DTWAIN_SOURCE;Highlight:PAnsiChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetHighlightStringA';
  function DTWAIN_GetHighlightStringW(Source:DTWAIN_SOURCE;Highlight:PWideChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetHighlightStringW';
  function DTWAIN_GetImageInfo(Source:DTWAIN_SOURCE;var lpXResolution:DTWAIN_FLOAT;var lpYResolution:DTWAIN_FLOAT;lpWidth:LPLONG;lpLength:LPLONG;lpNumSamples:LPLONG;lpBitsPerSample:LPDTWAIN_ARRAY;lpBitsPerPixel:LPLONG;lpPlanar:LPLONG;lpPixelType:LPLONG;lpCompression:LPLONG):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetImageInfo';
  function DTWAIN_GetImageInfoString(Source:DTWAIN_SOURCE;lpXResolution:LPWSTR;lpYResolution:LPWSTR;lpWidth:LPLONG;lpLength:LPLONG;lpNumSamples:LPLONG;lpBitsPerSample:LPDTWAIN_ARRAY;lpBitsPerPixel:LPLONG;lpPlanar:LPLONG;lpPixelType:LPLONG;lpCompression:LPLONG):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetImageInfoString';
  function DTWAIN_GetImageInfoStringA(Source:DTWAIN_SOURCE;lpXResolution:PAnsiChar;lpYResolution:PAnsiChar;lpWidth:LPLONG;lpLength:LPLONG;lpNumSamples:LPLONG;lpBitsPerSample:LPDTWAIN_ARRAY;lpBitsPerPixel:LPLONG;lpPlanar:LPLONG;lpPixelType:LPLONG;lpCompression:LPLONG):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetImageInfoStringA';
  function DTWAIN_GetImageInfoStringW(Source:DTWAIN_SOURCE;lpXResolution:PWideChar;lpYResolution:PWideChar;lpWidth:LPLONG;lpLength:LPLONG;lpNumSamples:LPLONG;lpBitsPerSample:LPDTWAIN_ARRAY;lpBitsPerPixel:LPLONG;lpPlanar:LPLONG;lpPixelType:LPLONG;lpCompression:LPLONG):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetImageInfoStringW';
  function DTWAIN_GetJobControl(Source:DTWAIN_SOURCE;pJobControl:LPLONG;bCurrent:DTWAIN_BOOL):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetJobControl';
  function DTWAIN_GetJpegValues(Source:DTWAIN_SOURCE;pQuality:LPLONG;Progressive:LPLONG):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetJpegValues';
  function DTWAIN_GetLanguage:DWORD; stdcall;
 external 'DTWAIN64U.DLL' name 'DTWAIN_GetLanguage';
  function DTWAIN_GetLastError:DWORD; stdcall;
 external 'DTWAIN64U.DLL' name 'DTWAIN_GetLastError';
  function DTWAIN_GetLightPath(Source:DTWAIN_SOURCE;lpLightPath:LPLONG):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetLightPath';
  function DTWAIN_GetLightSources(Source:DTWAIN_SOURCE;LightSources:LPDTWAIN_ARRAY):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetLightSources';
  function DTWAIN_GetManualDuplexCount(Source:DTWAIN_SOURCE;pSide1:LPLONG;pSide2:LPLONG):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetManualDuplexCount';
  function DTWAIN_GetMaxAcquisitions(Source:DTWAIN_SOURCE):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetMaxAcquisitions';
  function DTWAIN_GetMaxBuffers(Source:DTWAIN_SOURCE;pMaxBuf:LPLONG):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetMaxBuffers';
  function DTWAIN_GetMaxPagesToAcquire(Source:DTWAIN_SOURCE):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetMaxPagesToAcquire';
  function DTWAIN_GetMaxRetryAttempts(Source:DTWAIN_SOURCE):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetMaxRetryAttempts';
  function DTWAIN_GetNameFromCap(nCapValue:DWORD;szValue:LPWSTR;nMaxLen:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetNameFromCap';
  function DTWAIN_GetNameFromCapA(nCapValue:DWORD;szValue:PAnsiChar;nLength:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetNameFromCapA';
